--- a/hackathon.html
+++ b/hackathon.html
@@ -19,7 +19,7 @@
 
 		<font face="serif" color="goldenrod"><center><h1>[ ~ mApp ~ ]</h1></center></font>
 
-			<strong><center><p>[Paragraph]</p></center></strong>
+			<strong><center><p>[WOMEN IN COMPUTER SCIENCE]</p></center></strong>
 			<center><a href="https://www.usfca.edu/directions/campus-map">USF Campus Map</a><center>
 
 			<center><img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/12118837_915346478535832_2007628826483634637_n.jpg?oh=1e1b8832868379b562a4bebcade9f4f5&oe=57B47562"></center>
