relocated the file for the form tag in hackathon.html

--- a/WiCSathon/static/hackathon.html
+++ b/WiCSathon/static/hackathon.html
@@ -25,7 +25,7 @@
 			<center><img src="https://scontent-sjc2-1.xx.fbcdn.net/hphotos-xat1/v/t1.0-9/12118837_915346478535832_2007628826483634637_n.jpg?oh=1e1b8832868379b562a4bebcade9f4f5&oe=57B47562"></center>
 			
 			<br><div style="letter-spacing:12px;font-size:35px;position:relative;center:25px;top:25px;"> ~ Check in to a location on campus ~ </div></br>
-            <form action="/study" method="post">
+            <form action="../WiCSathon.py/" method="post">
 			<br><input type="submit" value="CLICK ME">
             </form>
 
