--- a/hackathon.html
+++ b/hackathon.html
@@ -27,8 +27,8 @@
 			
 			<br><div style="letter-spacing:12px;font-size:35px;position:relative;center:25px;top:25px;"> ~ Check in to a location on campus ~ </div></br>
 
-			<br><div style="font-size:40px;position:left;"><button> CLICK ME </button></div></br>
-
+			<br>
+			<div style="font-size:40px;position:left;"><button> CLICK ME </button></div></br>
 			<br> <div style="background:lightpink;border2px solid;" contextmenu="menu1">
 			<!--	<menu> { MENU }
 				</menu>
